--- a/src/main.scss
+++ b/src/main.scss
@@ -27,6 +27,15 @@ button {
   cursor: pointer;
 }
 
+table {
+  border-collapse: collapse;
+}
+
+tbody tr:nth-child(odd) {
+  background-color: color(background, dark);
+  color: #fff;
+}
+
 h1,
 h2,
 h3 {
@@ -45,46 +54,8 @@ body {
   //   'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-$base-color: #7a0d43;
-
-html {
-  margin-bottom: 15px;
-}
-
-body {
-  margin: 1%;
-  margin-bottom: auto;
-  color: $base-color;
-}
-
-.settingsFlex {
-  margin: 4.25rem 0;
-}
-.settingsFlex > * {
-  flex: 1 1 300px;
-}
-
-.usersFlex {
-  margin: 4.25rem 0 1rem 0;
-}
-
-.usersFlex > * {
-  flex: 1 1 300px;
-}
-
-.containerFlex {
-  margin: 4.25rem 0;
-}
-
-.containerFlex > * {
-  flex: 1 1 300px;
-}
-
-.metric-card {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   background-color: color(background, darkest);
   color: color(light, base);
 }
